--- a/SoundVisualizer3D/packages.config
+++ b/SoundVisualizer3D/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Bass.Net" version="1.0.0" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.3.0" targetFramework="net452" />
+  <package id="Prism.Core" version="6.2.0" targetFramework="net452" />
 </packages>
