--- a/SoundVisualizer3D.Desktop/SoundVisualizer3D.Desktop.csproj
+++ b/SoundVisualizer3D.Desktop/SoundVisualizer3D.Desktop.csproj
@@ -70,6 +70,8 @@
     <Compile Include="MonoGameModule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Visualization\TestVisualization.cs" />
+    <Compile Include="Visualization\WaveformVisualization.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
