--- a/SoundVisualizer3D.Desktop/SoundVisualizer3D.Desktop.csproj
+++ b/SoundVisualizer3D.Desktop/SoundVisualizer3D.Desktop.csproj
@@ -70,15 +70,17 @@
     <Compile Include="MonoGameModule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Render\Objects\Visualizations\BlocksVisualization.cs" />
     <Compile Include="Render\Objects\Visualizations\TestVisualization.cs" />
     <Compile Include="Render\Objects\Visualizations\WaveformVisualization.cs" />
-    <Compile Include="Render\Objects\Camera.cs" />
-    <Compile Include="Render\Objects\ICamera.cs" />
+    <Compile Include="Render\Objects\Cameras\Camera.cs" />
+    <Compile Include="Render\Objects\Cameras\ICamera.cs" />
     <Compile Include="Render\SceneObject.cs" />
     <Compile Include="Render\ScreenAllocation.cs" />
     <Compile Include="Render\ScreenObject.cs" />
     <Compile Include="Render\Screen\Arrow.cs" />
     <Compile Include="Render\Screen\Hud.cs" />
+    <Compile Include="Utils\ColorUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
