--- a/SoundVisualizer3D.Desktop/SoundVisualizer3D.Desktop.csproj
+++ b/SoundVisualizer3D.Desktop/SoundVisualizer3D.Desktop.csproj
@@ -70,6 +70,8 @@
     <Compile Include="MonoGameModule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Render\Objects\UI\Button.cs" />
+    <Compile Include="Render\Objects\UI\Clickable.cs" />
     <Compile Include="Render\Objects\Visualizations\BlocksVisualization.cs" />
     <Compile Include="Render\Objects\Visualizations\TestVisualization.cs" />
     <Compile Include="Render\Objects\Visualizations\WaveformVisualization.cs" />
@@ -83,6 +85,9 @@
     <Compile Include="Utils\ColorUtils.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\gray-button.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="App.config" />
     <Content Include="Content\DefaultFont.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
