--- a/SoundVisualizer3D.Desktop/SoundVisualizer3D.Desktop.csproj
+++ b/SoundVisualizer3D.Desktop/SoundVisualizer3D.Desktop.csproj
@@ -70,6 +70,8 @@
     <Compile Include="MonoGameModule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Render\Screen\UI\Button.cs" />
+    <Compile Include="Render\Screen\UI\ClickableBase.cs" />
     <Compile Include="Render\Objects\Visualizations\BlocksVisualization.cs" />
     <Compile Include="Render\Objects\Visualizations\TestVisualization.cs" />
     <Compile Include="Render\Objects\Visualizations\WaveformVisualization.cs" />
@@ -84,6 +86,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Content Include="Content\Buttons\play.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\DefaultFont.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
